# dme-voice-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEFENSE.md  DESIGN.md  Dockerfile  Makefile  PLAN.md  README.md  WALKTHROUGH.md  WRITEUP.md  fly.toml  mock_suppliers.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: callback.py  cases.py  coverage.py  main.py  models.py  orchestrator.py  store.py  supplier_outreach.py  vendor_match.py
cekura/: README.md  provision.py
conversation/: README.md  __init__.py  graph.py  intake.py  requirements.txt  run_demo.py  state.py
data/: mock_supplier_responses.json  sample-supplier-directory.csv
docs/: cekura_results.md  demo_script.md  orchestration.md  sample_call.md
evals/: conversation_evals.py  run_evals.py
sim/: run_demo.py
static/: console.html  replay.html
temporal/: README.md  __init__.py  activities.py  requirements.txt  starter.py  worker.py  workflow.py
tests/: conftest.py  test_api.py  test_coverage.py  test_orchestrator.py  test_store.py  test_supplier_outreach.py  test_vendor_match.py
vapi/: assistant.json  patient_update_prompt.md  provision.py  system_prompt.md
